packages/isar_community_generator/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:isar_community/isar_community.dart';

@collection
class Model {
  Id? id;

  late Set<String>? prop;
}
